overlays: fix scrollbar jump when toggling overlay

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -22,6 +22,7 @@
 }
 
 @component AppColumn {
+  overflow: hidden;
   position: absolute;
   height: 100%;
 
